Modify user info struct
