# local-test/reference/notification/api.yaml
@@ -139,6 +139,8 @@ components:
                     type: boolean
                 is_followed:
                     type: boolean
+                is_pending:
+                    type: boolean
             required:
                 - user_id
                 - user_name
@@ -148,6 +150,7 @@ components:
                 - is_admin
                 - is_following
                 - is_followed
+                - is_pending
         Notifications:
             type: array
             items:
@@ -257,6 +260,8 @@ components:
                     type: boolean
                 is_followed:
                     type: boolean
+                is_pending:
+                    type: boolean
             required:
                 - user_id
                 - user_name
@@ -265,3 +270,4 @@ components:
                 - is_admin
                 - is_following
                 - is_followed
+                - is_pending
