# production/internal/handler/user/handler.go
@@ -48,6 +48,7 @@ func (h *UserHandler) GetClientProfile(w http.ResponseWriter, r *http.Request) {
 			IsAdmin:         profile.UserInfo.IsAdmin,
 			IsFollowing:     profile.UserInfo.IsFollowing,
 			IsFollowed:      profile.UserInfo.IsFollowed,
+			IsPending:       profile.UserInfo.IsPending,
 		},
 		BannerImageUrl: profile.BannerImageURL,
 		TweetCount:     profile.TweetCount,
@@ -95,6 +96,7 @@ func (h *UserHandler) GetUserProfile(w http.ResponseWriter, r *http.Request, _ s
 			IsAdmin:         profile.UserInfo.IsAdmin,
 			IsFollowing:     profile.UserInfo.IsFollowing,
 			IsFollowed:      profile.UserInfo.IsFollowed,
+			IsPending:       profile.UserInfo.IsPending,
 		},
 		BannerImageUrl: profile.BannerImageURL,
 		TweetCount:     profile.TweetCount,
@@ -251,6 +253,7 @@ func convertToTweetInfo(t *model.TweetInfo) *TweetInfo {
 			IsAdmin: 	 t.UserInfo.IsAdmin,
 			IsFollowing:     t.UserInfo.IsFollowing,
 			IsFollowed:      t.UserInfo.IsFollowed,
+			IsPending:       t.UserInfo.IsPending,
 		},
 		LikesCount:    t.LikesCount,
 		RetweetsCount: t.RetweetsCount,
